@@ -1,51 +1,111 @@
 package com.clinix.forge.core.payload;
 
 import com.fasterxml.jackson.annotation.JsonInclude;
-import lombok.Builder;
+import io.swagger.v3.oas.annotations.media.Schema;
 
 import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
-/**
- * Standardized, strictly typed, and immutable API Response wrapper.
- */
-@Builder
 @JsonInclude(JsonInclude.Include.NON_NULL)
 public record ApiResponse<T>(
+        @Schema(
+                description = "Boolean value describing whether the response is success or failure",
+                example = "true"
+        )
         boolean success,
+
+        @Schema(
+                description = "HTTP status code returned with the response",
+                example = "200"
+        )
+        int statusCode,
+
+        @Schema(
+                description = "Human readable message",
+                example = "User login successful"
+        )
         String message,
+
+        @Schema(description = "Actual data that is being returned")
         T data,
-        List<ApiValidationError> errors,
-        Map<String, Object> meta
+
+        @Schema(
+                description = "In case there are any errors they are going to be listed here"
+        )
+        List<ApiError> errors,
+
+        @Schema(description = "Pagination metadata if the respone is of page")
+        PaginationMetadata pagination,
+
+        @Schema(description = "Timestamp of the return of the response")
+        Instant timestamp
 ) {
-
-    public static <T> ApiResponse<T> success(String message, T data) {
-        return ApiResponse.<T>builder()
-                .success(true)
-                .message(message)
-                .data(data)
-                .errors(Collections.emptyList())
-                .meta(Map.of("timestamp", Instant.now()))
-                .build();
+    // Non-paginated success
+    public static <T> ApiResponse<T> success(T data) {
+        return new ApiResponse<>(
+                true,
+                200,
+                "Request successful",
+                data,
+                null,
+                null,
+                Instant.now()
+        );
     }
 
-    public static <T> ApiResponse<T> success(String message) {
-        return success(message, null);
+    // Paginated success
+    public static <T> ApiResponse<T> success(T data, PaginationMetadata pagination) {
+        return new ApiResponse<>(
+                true,
+                200,
+                "Request successful",
+                data,
+                null,
+                pagination,
+                Instant.now()
+        );
     }
 
-    public static <T> ApiResponse<T> error(String message, List<ApiValidationError> errors) {
-        return ApiResponse.<T>builder()
-                .success(false)
-                .message(message)
-                .data(null)
-                .errors(errors != null ? errors : Collections.emptyList())
-                .meta(Map.of("timestamp", Instant.now()))
-                .build();
+    // Validation errors (400)
+    public static <T> ApiResponse<T> validationError(List<ApiError> errors) {
+        return new ApiResponse<>(
+                false,
+                400,
+                "Validation failed",
+                null,
+                errors,
+                null,
+                Instant.now()
+        );
     }
 
-    public static <T> ApiResponse<T> error(String message) {
-        return error(message, Collections.emptyList());
+    // Business/domain error (4xx range)
+    public static <T> ApiResponse<T> error(
+            int statusCode,
+            String code,
+            String message
+    ) {
+        return new ApiResponse<>(
+                false,
+                statusCode,
+                message,
+                null,
+                List.of(new ApiError(code, message)),
+                null,
+                Instant.now()
+        );
+    }
+
+    // Server error (500)
+    public static <T> ApiResponse<T> serverError() {
+        return new ApiResponse<>(
+                false,
+                500,
+                "Internal server error",
+                null,
+                List.of(new ApiError("SERVER_ERROR", "An unexpected error occurred")),
+                null,
+                Instant.now()
+        );
     }
 }
